--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "form-data": "^4.0.5",
     "fs-extra": "^11.1.1",
     "https-proxy-agent": "^5.0.1",
+    "mysql2": "^3.15.3",
     "node-fetch": "^2.7.0",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.7",
